resources/testcases_static_checks/tests/positive/isShy/b28.rls
../../../tests_common_data/rule-classification-examples/b28.rls