resources/testcases_static_checks/tests/negative/isFrontierOne/g28.rls
../../../tests_common_data/rule-classification-examples/g28.rls